--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-router": "^3.0.0",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0",
-    "sanitize.css": "^4.1.0"
+    "sanitize.css": "^4.1.0",
+    "styled-components": "^2.1.0"
   },
   "scripts": {
     "prestart": "source .env && npm run stylesheets",
