--- a/package.json
+++ b/package.json
@@ -6,12 +6,21 @@
     "foreman": "^2.0.0",
     "react-scripts": "0.7.0"
   },
+  "lint-staged": {
+    "src/**/*.js": [
+      "prettier --single-quote --write --trailing-comma all",
+      "git add"
+    ]
+  },
   "dependencies": {
     "classnames": "^2.2.5",
     "concurrently": "^3.1.0",
+    "husky": "^0.14.1",
+    "lint-staged": "^4.0.0",
     "node-polyglot": "^2.2.2",
     "node-sass": "^3.13.0",
     "node-uuid": "^1.4.8",
+    "prettier": "^1.5.2",
     "react": "^15.4.0",
     "react-dom": "^15.4.0",
     "react-redux": "^4.4.6",
@@ -27,6 +36,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "stylesheets": "node-sass ./stylesheets/App.scss -r -o ./src"
+    "stylesheets": "node-sass ./stylesheets/App.scss -r -o ./src",
+    "prettier": "prettier --single-quote --trailing-comma all --write 'src/**/*.js'",
+    "prettier:check": "prettier --single-quote --trailing-comma all -l 'src/**/*.js'"
   }
 }
