--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-redux": "^4.4.6",
     "react-router": "^3.0.0",
     "redux": "^3.6.0",
+    "redux-form": "^6.8.0",
     "redux-thunk": "^2.1.0",
     "sanitize.css": "^4.1.0",
     "styled-components": "^2.1.0"
