--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "classnames": "^2.2.5",
     "concurrently": "^3.1.0",
+    "humps": "^2.0.1",
     "husky": "^0.14.1",
     "lint-staged": "^4.0.0",
     "node-polyglot": "^2.2.2",
